--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # RewriteRule ^du-an\.html$ index.php?module=portfolios
 RewriteRule ^(.+)$ index.php/$1 [L,QSA]
+RewriteRule ^$ index.php [L]
